package org.opencb.opencga.storage.alignment;
option java_outer_classname = "AlignmentProto";

message Difference {
    enum DifferenceOperator {
        INSERTION = 1;
        DELETION = 2;
        MISMATCH = 3;
        SKIPPED_REGION = 4;
        SOFT_CLIPPING = 5;
        HARD_CLIPPING = 6;
        PADDING = 7;
    };
    required DifferenceOperator operator = 1;
    required uint32 pos = 2;
    required uint32 length = 3;
    optional bytes sequence = 4;
}

message MyMap {
    message Pair {
        required string key = 1;
        required string value = 2;
    }
    repeated Pair pair = 1;
}


message AlignmentRecord {
    required string name = 1;
    required uint32 pos = 2; // position relative to the alignment region
    required uint32 len = 3;
    required uint32 mapq = 4;
    required string qualities = 5;
    required string rnext = 6;
    required sint32 relativePnext = 7;
    required sint32 inferredInsertSize = 8;
    repeated Difference diffs = 9;
    optional MyMap tags = 10;
    required uint32 flags = 11;
}

// TODO unclipped start and end?
message AlignmentRegion {
    repeated AlignmentRecord alignmentRecords = 1;
}


message Header {
    message Region {
        required string chromosomeName = 1;
        required uint32 maxValue = 2;
    }
    repeated Region regions = 1;
    optional string SamHeader = 2;
}